--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "ajax": "^0.0.4",
-        "bootstrap": "^5.3.2", 
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap": "^5.3.2",
+        "bootstrap-icons": "^1.11.3",
+        "chart.js": "^4.4.2"
     }
 }
